@@ -2,6 +2,7 @@
 v2.0.10-git
 -----------
 
+[mms] Don't allow a user to save a rule with no matching conditions.
 
 
 ------
